[package]
edition = "2018"
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
name = "dmenv"
version = "0.8.4"
description = "The stupid virtualenv manager"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/TankerHQ/dmenv"
documentation = "https://tankerhq.github.io/dmenv/"

keywords = ["python", "virtualenv"]
categories = ["command-line-utilities"]

[dependencies]
colored = "1.6"
structopt = "0.2"
which = "2.0"
libc = "0.2.46"
regex = "1.1.0"

[dev-dependencies]
tempdir = "0.3"
ignore = "0.4.6"
