[package]
authors = ["Dimitri Merejkowsky <d.merej@gmail.com>"]
categories = ["command-line-utilities"]
description = "Simple and practical virtualenv manager for Python"
documentation = "https://tankerhq.github.io/dmenv/"
edition = "2018"
keywords = ["python", "virtualenv"]
license = "BSD-3-Clause"
name = "dmenv"
readme = "README.md"
repository = "https://github.com/TankerHQ/dmenv"
version = "0.18.0"

[dependencies]
app_dirs = "1.2.1"
colored = "1.6"
libc = "0.2.46"
serde = "*"
serde_derive = "*"
serde_json = "*"
regex = "1.1.0"
rust-ini = "0.13.0"
smallvec = "0.6.10"
structopt = "0.2"
which = "2.0"

[dev-dependencies]
ignore = "0.4.6"
tempdir = "0.3"
