[metadata]
name = demo
version = 0.1
description = dmenv demo
classifiers =
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages= find:
install_requires =
  path.py

[options.extras_require]
dev =
    pytest

[options.entry_points]
console_scripts =
  demo = demo:main
