[pycodestyle]
ignore=E221,E731

[metadata]
name = demo
version = 0.6.1
classifiers =
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7

[options]
py_modules = demo
install_requires =
  path.py

[options.extras_require]
dev =
  pytest

[options.entry_points]
console_scripts =
  demo = demo:main
