[metadata]
name = dmenv-demo
version = 0.6.1
description = dmenv demo

[options]
py_modules = demo
install_requires =
  path.py
classifiers =
  "Programming Language :: Python :: 3.3"
  "Programming Language :: Python :: 3.4"
  "Programming Language :: Python :: 3.5"
  "Programming Language :: Python :: 3.6"

[options.extras_require]
dev =
  pytest

prod =
  gunicorn


[options.entry_points]
console_scripts = demo=demo:main
